Adjust navbar menu modal  z-index to prevent buttons behind backdrop from getting activated

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -74,6 +74,7 @@ img {
   top: 0;
   height: 100vh;
   width: 100vw;
+  z-index: 100;
 }
 
 .modal-active {
